Corrections to the behavior of the scrollbars
   - The scroll bars on the `gx-table-cell` container of the `gx-tab`, no longer will be used when the content of the Tab overflows, even if the `gx-table-cell` container has set `overflow-mode=scroll`.

   - Now, the vertical scrollbar in the tab pages will properly be setted when the content overflows.

   - Now, when the tab strip has no sufficient height to display the captions, a vertical scroll bar will appear.

   - Now, when the tab strip has no sufficient width to display the captions, a horizontal scroll bar will appear, which does not occupy any height.

   - When the parent container of the `gx-tab` has low values of height to display the captions and the pages, the `gx-tab` will set scroll bars to the strip and the pages, in order to maintain a height ratio of the 50% between the strip and pages.

--- a/src/components/tab-caption/tab-caption.scss
+++ b/src/components/tab-caption/tab-caption.scss
@@ -16,7 +16,7 @@
 }
 
 gx-tab-caption {
-  @include visibility(flex);
+  @include visibility(inline-block);
 
   @include imagePosition("a", ":not(.gx-tab-caption--active)");
 
@@ -36,15 +36,16 @@ gx-tab-caption {
   text-transform: uppercase;
 
   &.gx-tab-caption {
+    height: fit-content;
+
     .gx-nav-link {
       display: flex;
+      height: fit-content;
       padding: var(--tab-caption-vertical-padding)
         var(--tab-caption-horizontal-padding);
       white-space: nowrap;
-      border-color: transparent;
-      border-style: solid;
+      border: 1px solid transparent;
       border-bottom-color: var(--tab-caption-border-color);
-      border-width: 1px;
 
       &,
       &:active,
